# helios

./: Cargo.toml  README.md
helios-cli/: Cargo.toml
helios-cli/src/: main.rs
helios-daemon/: Cargo.toml
helios-daemon/src/: main.rs
helios-daemon/src/execution/: executor.rs  job_object.rs  mod.rs
helios-daemon/src/ipc/: mod.rs  named_pipe.rs
helios-daemon/src/network/: discovery.rs  grpc_server.rs  mod.rs
helios-daemon/src/orchestrator/: scheduler.rs
helios-daemon/src/ui/: dx12_backend.rs  mod.rs
helios-proto/: Cargo.toml  build.rs
helios-proto/proto/: helios.proto
helios-proto/src/: lib.rs
