[workspace]
members = [
    "helios-cli",
    "helios-daemon",
    "helios-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Samarth"]
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
windows = { version = "0.52", features = [
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading"
] }
imgui = "0.11"