[package]
name = "helios-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
windows.workspace = true
tonic.workspace = true
prost.workspace = true
helios-proto = { path = "../helios-proto"}
mdns-sd = "0.4"
uuid = { version = "1.6", features = ["v4"] }
imgui.workspace = true